sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:19: error: ';' expected but 'while' found.
}while (a>0|b>0)
 ^AlgCocktailSort1:21: error: 'while' expected but '}' found.
}
^